--- a/public/views/answers.html
+++ b/public/views/answers.html
@@ -13,7 +13,17 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel2" style="color:black">This player has already been invited</h4>
+        <h4 class="modal-title" id="exampleModalLabel2" style="color:black">{{areadyInvitedPlayer}} has already been invited</h4>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" tabindex="-1" role="dialog" id="noFriendsInList">
+  <div class="modal-dialog playerLimitAlert" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="exampleModalLabel2" style="color:black">You have no friends in your friends list</h4>
       </div>
     </div>
   </div>
@@ -66,6 +76,9 @@
       <div class="col-lg-6" style="margin: 0 15%; width: 70%;">
         <div ng-repeat="players in invitedPlayers" style="margin-top: 2px;">{{players}} has been sent an invite.</div>
         <div>
+          <button ng-class="filterFriendsIndicator()" ng-click="filterFriends()" class="btn friends-button" type="button">
+            Friends
+          </button>
           <div class="input-group">
             <input type="text" class="form-control" ng-click="showAllPlayers()" ng-keyup="playerSearch()" ng-model="inviteeUsername" placeholder="Search for friends to invite">
             <span class="input-group-btn">
@@ -74,10 +87,15 @@
           </div>
         </div>
         <div ng-show="searchResults.length !== 0" style="height: 135px; background-color: lightgray; text-align: left; overflow: scroll; border-radius: 2px 2px 4px 4px">
-          <div ng-class="clickInvitee(result)" ng-repeat="result in searchResults" ng-click="selectUser(result)">
-            {{result.username}}
-            <span ng-if="isInvited(result)">&nbsp&nbsp-&nbsp&nbsp Invited</span>
-            <span ng-if="isSelected(result)" style="color: lightslategrey">&nbsp&nbsp-&nbsp&nbsp Selected</span>
+          <div ng-class="clickInvitee(result)" ng-repeat="result in searchResults" ng-show="isFriend(result)">
+            <div style="float: left">
+              <input style="margin: 0 32px 0 32px" type="checkbox" ng-model="friends[result.email]" >
+            </div>
+            <div ng-click="selectUser(result)">
+              {{result.username}}
+              <span ng-show="isInvited(result)">&nbsp&nbsp-&nbsp&nbsp Invited</span>
+              <span ng-show="isSelected(result)" style="color: lightslategrey">&nbsp&nbsp-&nbsp&nbsp Selected</span>
+            </div>
           </div>
         </div>
         <div ng-show="searchResults.length !== 0" class="close-player-list" ng-click="searchResults = []">Close</div>
